# saga-vtt

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: .eslintrc.cjs  eslint.config.js  index.html  package.json
apps/web/src/: main.tsx  protocol.generated.ts
apps/web/src/ui/: App.tsx  Board.tsx
docs/: agent-context.md  architecture.md  data-model.md  llm-playbook.md  protocol.md  roadmap.md  typed-protocol-schema.md  vision.md
docs/adrs/: 0000-template.md
infra/: docker-compose.yml
schemas/: README.md  protocol.json
services/api/: README.md  pyproject.toml
services/api/app/: main.py  protocol_generated.py
services/api/tests/: test_health.py  test_integration_smoke.py  test_rooms_and_moves.py
tools/: README.md  context-refresh.sh  generate-types.mjs  generate_types.py  setup-and-run.sh
