[tool.poetry]
name = "skirmish-vtt-api"
version = "0.1.0"
description = "Server-authoritative API for a skirmish VTT"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.15.6"
mypy = "^1.8.0"
httpx = "^0.28.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
